@@ -29,7 +29,6 @@
   </p>
 <% end %>
 
-<%= link_to 'Exibir', @reserva %> 
-<% if session[:admin] %>
-| <%= link_to 'Voltar', reservas_path %>
-<% end %>
+<%= link_to 'Exibir', @reserva %> | 
+<%= link_to 'Voltar', reservas_path %>
+
