@@ -2,7 +2,7 @@
 <% end %>
 
 <p><%= link_to 'Tipos de apartamentos', :controller => "tipos_apartamentos", :action => "index" %></p>
-<p><%= link_to 'Reserva', :controller => "reservas", :action => "new"%></p> 
+<p><%= link_to 'Minhas reservas', :controller => "reservas", :action => "index"%></p> 
 
 
 <br>
